  (Dmitry)
- Fixed bug #42868 (Floats cast to integer produce unpredictable results).
  (Zoe Slattery)
- Fixed bug #42848 (Status: header incorrect under FastCGI). (Dmitry)
- Fixed bug #42773 (WSDL error causes HTTP 500 Response). (Dmitry)
- Fixed bug #42737 (preg_split('//u') triggers a E_NOTICE with newlines).
  (Nuno)
- Fixed bug #42736 (xmlrpc_server_call_method() crashes). (Tony)
- Fixed bug #42657 (ini_get() returns incorrect value when default is NULL).
  (Jani, Scott)
- Fixed bug #42637 (SoapFault : Only http and https are allowed). (Bill Moran)
- Fixed bug #42548 (mysqli PROCEDURE calls can't return result sets). (Hartmut)
- Fixed bug #42509 (gmp leaks memory when gmp_init() not used). (Stas)
- Fixed bug #42499 (PDO_MYSQL: multi-statement execution via PDO::exec() makes
  connection unusable). (Johannes)
- Fixed bug #42443 (PDO SQLite driver binds integers and booleans as strings).
  (Scott)
- Fixed bug #42284 (duplicate of #39700). (Lars W)
- Fixed bug #42203 (Clear SQLite result sets before closing database). (Scott)
- Fixed bug #42190 (Constructing DateTime with TimeZone Indicator invalidates
  DateTimeZone). (Derick)
- Fixed bug #42069 (parse_ini_file() allows using some non-alpha numeric
  characters). (Jani)
- Fixed bug #41997 (pdo_mysql: stored procedure call returning single rowset
  blocks future queries). (Johannes)
- Fixed bug #41996 (Problem accessing Oracle ROWID). (Martin Jansen)
- Fixed bug #41599 (setTime() fails after modify() is used). (Derick)
- Fixed bug #41522 (PDO firebird driver returns null if it fails to connect).
  (Lars W)
- Fixed bug #41135 (PDO SQLite driver binds blobs as strings,
  use sqlite3_bind_blob() to stop errors with null bytes). (Scott)
- Fixed bug #41069 (OCI8: Seg fault with query over DB link) (Chris Jones)
- Fixed bug #39822 (new PDO() doesn't work with firebird). (Lars W)
- Fixed bug #39700 (NUMERIC error when result precision are 7,8 or 12-14 ).
  (Lars W)